# Smart-Parking-lot-hackathon

./: Dockerfile  README.md  app.py  inference.py  models.py  openenv.yaml  openenv_api.py  pyproject.toml  requirements.txt  tasks.py
env/: __init__.py  engine.py  openenv_api.py
scripts/: baseline.py
server/: app.py
ui/: app.py
