[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-parking-env"
version = "1.0.0"
description = "Smart Parking Lot Environment for OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.20.0",
    "pydantic>=2.5.0",
    "fastapi>=0.110.0",
    "openai",
    "uvicorn"
]
