[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-parking-env"
version = "1.0.0"
description = "Smart Parking Lot Environment for OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.20.0",
    "pydantic>=2.5.0",
    "fastapi>=0.110.0",
    "openai",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"